tests/typecheck/bad/to_bystr.scilexp
let x = 0xfb19 in
let y = builtin to_bystr x in
builtin to_bystr 20 y
